docs/ocp_ndb/k8s/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-path-a
spec:
  host: ${ROUTE_HOST}
  path: "/"   
  to:
    kind: Service
    name: react-cluster-ip-service
    port: 
      number: 3000

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-path-b
spec:
  host: ${ROUTE_HOST}
  path: "/admin"   
  to:
    kind: Service
    name: django-cluster-ip-service
    port: 
      number: 8000

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-path-c
spec:
  host: ${ROUTE_HOST}
  path: "/api"   
  to:
    kind: Service
    name: django-cluster-ip-service
    port: 
      number: 8000

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-path-d
spec:
  host: ${ROUTE_HOST}
  path: "/static/admin/"   
  to:
    kind: Service
    name: django-cluster-ip-service
    port: 
      number: 8000

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-path-e
spec:
  host: ${ROUTE_HOST}
  path: "/static/rest_framework/"   
  to:
    kind: Service
    name: django-cluster-ip-service
    port: 
      number: 8000

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-path-f
spec:
  host: ${ROUTE_HOST}
  path: "/static/"   
  to:
    kind: Service
    name: react-cluster-ip-service
    port: 
      number: 3000

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-path-g
spec:
  host: ${ROUTE_HOST}
  path: "/media/"   
  to:
    kind: Service
    name: react-cluster-ip-service
    port: 
      number: 3000
